varnish/tests/fail/error_obj_no_ctor.stderr
error: Object must have a constructor (a public method returning `Self` or `Result<Self, _>`)
 --> tests/fail/error_obj_no_ctor.rs:6:10
  |
6 |     impl ObjNoConstructor {
  |          ^^^^^^^^^^^^^^^^
